UtahLiveDataTest/src/objects/IndirectExpense__c.object
<CustomObject>
    <description>This object is used for SF425 Federal Financial Progress Report form.</description>
    <fields>
        <fullName>AmountCharged__c</fullName>
        <description>This field is used in SF425 Progress Report form.</description>
        <label>Amount Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <description>This field is used in SF425 Progress Report form.</description>
        <label>Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostRate__c</fullName>
        <description>This field is used in Progress Report form.</description>
        <label>Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalShare__c</fullName>
        <description>This field is used in Sf425 Progress Report form</description>
        <label>Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodFrom__c</fullName>
        <description>This field is used in Progress Report form.</description>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodTo__c</fullName>
        <description>This field is used in Progress Report form.</description>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgressReport__c</fullName>
        <label>Progress Report</label>
        <referenceTo>ProgressReports__c</referenceTo>
        <relationshipLabel>Indirect Expenses</relationshipLabel>
        <relationshipName>Indirect_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TypeOfRate__c</fullName>
        <description>This field is used in Progress Report form.</description>
        <label>Type Of Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Predetermined</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Indirect Expense</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Indirect Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>